--- a/packages/data/pubspec_overrides.yaml
+++ b/packages/data/pubspec_overrides.yaml
@@ -1,8 +1,6 @@
-# melos_managed_dependency_overrides: change_application_name,core,design_system,localization,utils
+# melos_managed_dependency_overrides: core,design_system,localization,utils,change_application_name
 dependency_overrides:
   extended_image: ^10.0.0
-  change_application_name:
-    path: ../../apps/app
   core:
     path: ../core
   design_system:
@@ -11,4 +9,6 @@ dependency_overrides:
     path: ../localization
   utils:
     path: ../utils
+  change_application_name:
+    path: ../../apps/app
 
