--- a/packages/utils/pubspec_overrides.yaml
+++ b/packages/utils/pubspec_overrides.yaml
@@ -1,7 +1,5 @@
-# melos_managed_dependency_overrides: change_application_name,core,data,design_system,localization,extended_image
+# melos_managed_dependency_overrides: core,data,design_system,localization,extended_image,change_application_name
 dependency_overrides:
-  change_application_name:
-    path: ../../apps/app
   core:
     path: ../core
   data:
@@ -11,3 +9,5 @@ dependency_overrides:
   localization:
     path: ../localization
   extended_image: ^10.0.0
+  change_application_name:
+    path: ../../apps/app
